default item open api and tests
